Re-enable java8 CI check
Closes: GH-30